<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="editor_activity_title_new_activity">Add an Habit</string>
    <string name="action_save">Save</string>
    <string name="category_main">Main</string>
    <string name="category_time">Time</string>
    <string name="category_place">Place</string>
    <string name="hint_activity_description">Description</string>
    <string name="hint_activity_duration">Duration</string>
    <string name="unit_activity_duration">min</string>
    <string name="hint_activity_place">Location</string>
    <string name="category_health">Health</string>
    <string name="category_spiritual">Spiritual</string>
    <string name="category_intellectual">Intellectual</string>
    <string name="category_manual">Manual</string>
    <string name="category_social">Social</string>
    <string name="moment_dawn">Dawn</string>
    <string name="moment_morning">Morning</string>
    <string name="moment_afternoon">Afternoon</string>
    <string name="moment_evening">Evening</string>
    <string name="moment_night">Night</string>
</resources>
