
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_main"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:orientation="vertical"
            android:paddingLeft="4dp">
            <EditText
                android:id="@+id/edit_activity_description"
                android:hint="@string/hint_activity_description"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingEnd="16dp"
                android:spinnerMode="dropdown"
                android:paddingRight="16dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Time category -->
    <LinearLayout
        android:id="@+id/container_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_time"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingLeft="4dp">

                <!-- Duration field -->
                <EditText
                    android:id="@+id/edit_activity_duration"
                    android:hint="@string/hint_activity_duration"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- Units for duration (min) -->
                <TextView
                    android:id="@+id/label_duration_units"
                    android:text="@string/unit_activity_duration"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

            <!-- Moment drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_moment"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingEnd="16dp"
                android:spinnerMode="dropdown"
                android:paddingRight="16dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Place category -->
    <LinearLayout
        android:id="@+id/container_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_place"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:paddingLeft="4dp">

            <!-- Place field -->
            <EditText
                android:id="@+id/edit_activity_place"
                android:hint="@string/hint_activity_place"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>